# live-files

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.toml  docker-compose.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  dispatch.rs  events.rs  lib.rs  path.rs  poll.rs  read.rs  scan.rs  time_fmt.rs  visibility.rs  watch.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  assets.rs  config_file.rs  main.rs  sse.rs  supervisor.rs
docs/: DESIGN.md  live-files-api.md  live-files-openapi.yaml  openclaw-finder-api.md
